Fine-tune MavenTask access transformers
- Allow multiple AccessTransformer configs to be used in MavenTask
- Fix AccessTransformer config not being properly cached
  - Refreshing the project (and/or re-running `syncMavenizer`) after changing or disabling ATs now work consistently